# halp

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CONTRIBuTING.md  README.md  codecov.yml  duties.py  old.toml  pyproject.toml
.github/: dependabot.yml  labeler.yml
.github/actions/setup-poetry/: action.yml
.github/actions/setup_python_env/: action.yml
.github/actions/uv-python-package/: action.yml
.github/workflows/: automated-tests.yml  commit-linter.yml  create-release.yml  manual_pypy_publish.yml  pr-linter.yml  pypi-release.yml  reusable-tests.yml  test.yml  update-codecov.yml
src/halp/: __version__.py  cli.py  constants.py
src/halp/commands/: category_display.py  command_display.py  hidden_commands.py  view_config.py
src/halp/config/: __init__.py  config.py
src/halp/models/: database.py  indexer.py  parser.py
src/halp/utils/: __init__.py  helpers.py  text_parsers.py
src/halper/: __init__.py  __version__.py  cli.py  constants.py  default_config.toml  halp.py
src/halper/cli/: __init__.py  config.py  helpers.py  hide.py  index.py  list.py  search.py  unhide.py
src/halper/commands/: __init__.py  categorize_command.py  category_display.py  command_display.py  edit_description.py  hidden_commands.py  search.py  view_config.py
src/halper/config/: __init__.py  config.py  default_config.toml
src/halper/controllers/: __init__.py  db_queries.py  indexer.py
src/halper/models/: __init__.py  category.py  command.py  database.py  file.py  index_result.py  indexer.py  parser.py  user_defined_category.py
src/halper/utils/: __init__.py  config.py  console.py  database.py  errors.py  helpers.py  logging.py  mankier.py  printer.py  text_parsers.py  utilities.py
src/halper/views/: __init__.py  commands.py  indexer.py  list.py  views.py
tests/: __init__.py  cli_test.py  config_test.py  conftest.py  indexer_test.py  parser_test.py  text_parser_test.py
tests/cli/: __init__.py  config_test.py  halp_test.py  hide_test.py  index_test.py  list_test.py  search_test.py
tests/fixtures/configs/: default_test_config.toml
tests/fixtures/dotfiles/: dotfiles_1.bash  dotfiles_2.bash  ignore.bash
tests/helpers/: text_parser_test.py
tests/models/: __init__.py  parser_test.py
