[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core>=1.0.0"]

[tool.poetry]
    authors     = ["Nate Landau <github@natenate.org>"]
    description = "One stop shop for command line help."
    homepage    = "https://github.com/natelandau/halp"
    keywords    = ["bash", "cli", "dotfiles", "shell", "zsh"]
    license     = "AGPL-3.0-or-later"
    name        = "halper"
    readme      = "README.md"
    repository  = "https://github.com/natelandau/halp"
    version     = "1.0.1"

    [tool.poetry.scripts] # https://python-poetry.org/docs/pyproject/#scripts
        halp = "halper.cli:app"

    [tool.poetry.dependencies]
        confz       = "^2.0.1"
        inflect     = "^7.0.0"
        loguru      = "^0.7.2"
        markdownify = "^0.11.6"
        parsy       = "^2.1"
        peewee      = "^3.17.0"
        python      = "^3.10"
        requests    = "^2.31.0"
        rich        = "^13.7.0"
        semver      = "^3.0.2"
        sh          = "^2.0.6"
        tomli       = "^2.0.1"
        typer       = { extras = ["all"], version = "^0.9.0" }

    [tool.poetry.group.test.dependencies]
        pytest                 = "^7.4.3"
        pytest-asyncio         = "^0.21.1"
        pytest-clarity         = "^1.0.1"
        pytest-env             = "^1.1.1"
        pytest-mock            = "^3.12.0"
        pytest-pretty-terminal = "^1.1.0"
        pytest-sugar           = "^0.9.7"
        pytest-xdist           = "^3.3.1"

    [tool.poetry.group.dev.dependencies]
        commitizen     = "^3.12.0"
        coverage       = "^7.3.1"
        mypy           = "^1.8.0"
        pdoc           = "^14.0.0"
        poethepoet     = "^0.24.2"
        pre-commit     = "^3.5.0"
        ruff           = "^0.2.0"
        sh             = "^2.0.4"
        shellcheck-py  = "^0.9.0.5"
        types-requests = "^2.31.0.20240106"
        typos          = "^1.17.1"
        vulture        = "^2.10"

[tool.commitizen]
    bump_message               = "bump(release): v$current_version → v$new_version"
    changelog_merge_prerelease = true
    tag_format                 = "v$version"
    update_changelog_on_bump   = true
    version                    = "1.0.1"
    version_files              = ["pyproject.toml:version", "src/halper/__version__.py:__version__"]

[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
    exclude_lines = [
        'def __repr__',
        'except [\w\s\._]+ as .*:',
        'log\.critical',
        'log\.debug',
        'log\.error',
        'log\.exception',
        'log\.info',
        'log\.success',
        'log\.trace',
        'log\.warning',
        'pragma: no cover',
        'raise Abort',
        'raise Exit',
        'raise typer\.Exit',
    ]
    fail_under = 50
    omit = ["src/halper/utils/errors.py"]
    precision = 1
    show_missing = true
    skip_covered = true

[tool.coverage.run]
    branch       = true
    command_line = "--module pytest"
    data_file    = "reports/.coverage"
    source       = ["src"]

[tool.coverage.xml]
    output = "reports/coverage.xml"

[tool.interrogate]
    exclude            = ["build", "docs", "tests"]
    fail-under         = 90
    ignore-init-method = true
    verbose            = 2

[tool.mypy] # https://mypy.readthedocs.io/en/latest/config_file.html
    disallow_any_unimported = false
    disallow_subclassing_any = false
    disallow_untyped_decorators = false
    disallow_untyped_defs = true
    exclude = [
        'tests/', # TOML literal string (single-quotes, regex okay, no escaping necessary)
    ]
    follow_imports = "normal"
    ignore_missing_imports = true
    junit_xml = "reports/mypy.xml"
    no_implicit_optional = true
    plugins = ["pydantic.mypy"]
    pretty = false
    show_column_numbers = true
    show_error_codes = true
    show_error_context = true
    warn_redundant_casts = true
    warn_unreachable = true
    warn_unused_ignores = true

[tool.pydantic-mypy]
    init_forbid_extra             = true
    init_typed                    = true
    warn_required_dynamic_aliases = true
    warn_untyped_fields           = true

[tool.pytest.ini_options]
    addopts        = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --junitxml=reports/pytest.xml"
    asyncio_mode   = "auto"
    filterwarnings = ["error", "ignore::DeprecationWarning"]
    testpaths      = ["src", "tests"]
    xfail_strict   = true

[tool.ruff] # https://github.com/charliermarsh/ruff
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".hg",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "venv",
    ]

    fix            = true
    line-length    = 100
    output-format  = "grouped"
    src            = ["src", "tests"]
    target-version = "py310"

    [tool.ruff.lint]
        # Avoiding flagging (and removing) `V101` from any `# noqa`
        # directives, despite Ruff's lack of support for `vulture`.
        external = ["V"]
        ignore = [
            "B006",    # mutable-argument-default
            "B008",    # function-call-in-default-argument
            "D107",    # undocumented-public-init
            "D213",    # multi-line-summary-second-line
            "D215",    # section-underline-not-over-indented
            "D406",    # new-line-after-section-name
            "D407",    # dashed-underline-after-section
            "D408",    # section-underline-after-name
            "D409",    # section-underline-matches-section-length
            "D413",    # blank-line-after-last-section
            "E501",    # line-too-long
            "ISC001",  # single-line-implicit-string-concatenation
            "N805",    # invalid-first-argument-name-for-method
            "PLR0913", # too-many-arguments
            "S311",    # suspicious-non-cryptographic-random-usage
            "UP007",   # non-pep604-annotation
        ]
        ignore-init-module-imports = true
        per-file-ignores = { "cli.py" = [
            "PLR0912",
            "PLR0913",
        ], "tests/*.py" = [
            "A002",
            "A003",
            "ARG002",
            "ARG005",
            "D102",
            "F403",
            "PGH003",
            "PLR0913",
            "PLR0917",
            "PLR2004",
            "PLR6301",
            "S101",
        ] }
        preview = true
        select = [
            "A",     # flake8-builtins
            "ARG",   # flake8-unused-arguments
            "ASYNC", # flake8-async
            "B",     # flake8-bugbear
            "BLE",   # flake8-blind-exception
            "C4",    # flake8-comprehensions
            "C90",   # McCabe
            "D",     # pydocstyle
            "E",     # pycodestyle Errors
            "EM",    # flake8-errmsg
            "ERA",   # flake8-eradicate
            "EXE",   # flake8-executable
            "F",     # pyflakes
            "FA",    # flake8-future
            "FLY",   # flynt
            "FURB",  # refurb
            "I",     # iSort
            "ISC",   # flake8-implicit-str-concat
            "N",     # Pep8-naming
            "NPY",   # flake8-numpy
            "PERF",  # Perflint
            "PGH",   # pygrep-hooks
            "PL",    # pylint
            "PLC",   # pylint Convention
            "PLE",   # pylint Error
            "PLR",   # pylint Refactor
            "PLW",   # pylint Warning
            "PT",    # flake8-pytest-style
            "PTH",   # flake8-use-pathlib
            "Q",     # flake8-quotes
            "RET",   # flake8-return
            "RUF",   # Ruff-specific rules
            "S",     # flake8-bandit
            "SIM",   # flake8-simplify
            "T20",   # flake8-print
            "TID",   # flake8-tidy-imports
            "TRY",   # tryceratops
            "UP",    # pyupgrade
            "W",     # pycodestyle Warnings
            "YTT",   # flake8-2020
            # "DTZ",   # flake8-datetimez
        ]
        unfixable = ["E712", "ERA001", "F401", "F841", "UP007"]
        [tool.ruff.lint.mccabe]
            # Unlike Flake8, default to a complexity level of 10.
            max-complexity = 10

        [tool.ruff.lint.pydocstyle]
            convention = "google"

        [tool.ruff.lint.pylint]
            max-args = 6

[tool.ruff.format]
    indent-style              = "space"
    line-ending               = "auto"
    quote-style               = "double"
    skip-magic-trailing-comma = false

[tool.vulture] # https://pypi.org/project/vulture/
    # exclude = ["file*.py", "dir/"]
    # ignore_decorators = ["@app.route", "@require_*"]
    ignore_names = ["args", "kwargs", "mock_config", "request", "version"]
    # make_whitelist = true
    min_confidence = 80
    paths          = ["src", "tests"]
    sort_by_size   = true
    verbose        = false

[tool.poe.tasks]

    [tool.poe.tasks.docs]
        cmd = """
pdoc
      --docformat google
--output-directory docs
src/halp
    """
        help = "Generate this package's docs"

    [tool.poe.tasks.lint]
        help = "Lint this package"

        [[tool.poe.tasks.lint.sequence]]
            shell = "ruff --no-fix src/"

        [[tool.poe.tasks.lint.sequence]]
            shell = "ruff format --check src/ tests/"

        [[tool.poe.tasks.lint.sequence]]
            shell = "poetry check"

        [[tool.poe.tasks.lint.sequence]]
            shell = "mypy --config-file pyproject.toml src/"

        [[tool.poe.tasks.lint.sequence]]
            shell = "typos"

        [[tool.poe.tasks.lint.sequence]]
            shell = "vulture src/ tests/ --exclude src/valentina/cogs/test_cog.py"

        [[tool.poe.tasks.lint.sequence]]
            shell = "yamllint ."

[tool.poe.tasks.test]
    help = "Test this package"

    [[tool.poe.tasks.test.sequence]]
        cmd = "coverage run"

    [[tool.poe.tasks.test.sequence]]
        cmd = "coverage report"

    [[tool.poe.tasks.test.sequence]]
        cmd = "coverage xml"
