[project]
    authors = [{ name = "Nate Landau", email = "github@natenate.org" }]
    classifiers = [
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
    ]
    dependencies = [
        "cappa>=0.28.1",
        "dynaconf>=3.2.11",
        "httpx>=0.28.1",
        "inflect>=7.5.0",
        "markdownify>=1.1.0",
        "nclutils>=1.1.0",
        "parsy>=2.1",
        "peewee>=3.18.2",
        "rich>=14.0.0",
        "semver>=3.0.4",
        "sh>=2.2.2",
    ]
    description = "One stop shop for command line help."
    license = { file = "LICENSE" }
    name = "halper"
    readme = "README.md"
    requires-python = ">=3.10"
    version = "2.0.2"

    [project.urls]
        Homepage   = "https://github.com/natelandau/halp"
        Repository = "https://github.com/natelandau/halp"

    [project.scripts]
        halp = "halper.halp:main"

[build-system]
    build-backend = "hatchling.build"
    requires      = ["hatchling"]

[dependency-groups]
    dev = [
        "commitizen>=4.8.3",
        "coverage>=7.9.2",
        "duty>=1.6.0",
        "mypy>=1.16.1",
        "pre-commit>=4.2.0",
        "pytest-clarity>=1.0.1",
        "pytest-cov>=6.2.1",
        "pytest-env>=1.1.5",
        "pytest-mock>=3.14.1",
        "pytest-pretty-terminal>=1.1.0",
        "pytest-sugar>=1.0.0",
        "pytest-xdist>=3.8.0",
        "pytest>=8.4.1",
        "ruff>=0.12.3",
        "typos>=1.34.0",
    ]

[tool.commitizen]
    bump_message               = "bump(release): v$current_version → v$new_version"
    changelog_merge_prerelease = true
    tag_format                 = "v$version"
    update_changelog_on_bump   = true
    version_files              = ["src/halper/constants.py:VERSION"]
    version_provider           = "uv"

[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
    exclude_lines = [
        'assert_never',
        'def __repr__',
        'except [\w\s\._]+ as .*:',
        'if TYPE_CHECKING:',
        'if __name__ == .__main__.:',
        'if typing.TYPE_CHECKING:',
        'pragma: no cover',
        'raise cappa\.Exit',
    ]
    fail_under = 50
    omit = ["src/halper/utils/errors.py"]
    precision = 1
    show_missing = true
    skip_covered = true

[tool.coverage.run]
    branch       = true
    command_line = "--module pytest"
    data_file    = ".cache/.coverage"
    source       = ["src"]

[tool.coverage.xml]
    output = ".cache/coverage.xml"

[tool.mypy] # https://mypy.readthedocs.io/en/latest/config_file.html
    cache_dir                   = ".cache/mypy"
    disallow_any_unimported     = false
    disallow_subclassing_any    = false
    disallow_untyped_decorators = false
    disallow_untyped_defs       = true
    exclude                     = ["tests/"]
    follow_imports              = "normal"
    ignore_missing_imports      = true
    junit_xml                   = ".cache/mypy.xml"
    no_implicit_optional        = true
    pretty                      = false
    show_column_numbers         = true
    show_error_codes            = true
    show_error_context          = true
    strict_optional             = false
    warn_redundant_casts        = true
    warn_unreachable            = true
    warn_unused_ignores         = true

[tool.pytest.ini_options]
    addopts        = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --junitxml=.cache/pytest.xml"
    cache_dir      = ".cache/pytest"
    filterwarnings = ["error", "ignore::DeprecationWarning", "ignore::ResourceWarning"]
    markers        = ["no_db: marks tests as not needing a database"]
    testpaths      = ["src", "tests"]
    xfail_strict   = true

[tool.ruff] # https://github.com/charliermarsh/ruff
    exclude        = [".cache", ".dev", ".git", ".venv", "_build", "build", "dist", "tmp"]
    fix            = true
    line-length    = 100
    output-format  = "grouped"
    src            = ["src", "tests"]
    target-version = "py310"

    [tool.ruff.lint]
        ignore = [
            "ANN204", # missing return type annotation for special method `__init__`
            "B006",   # mutable-argument-default
            "COM812", # Trailing comma missing
            "CPY001", # Missing copyright notice at top of file
            "D107",   # undocumented-public-init
            "D213",   # multi-line-summary-second-line
            "E501",   # line-too-long
            "FIX002", # Line contains TODO, consider resolving the issue
            "S311",   # suspicious-non-cryptographic-random-usage
            "TD002",  # Missing author in TODO
            "TD003",  # Missing issue link on the line following this TODO
        ]
        per-file-ignores = { "halp.py" = [
            "DOC501",
            "PLR0912",
            "PLR0913",
        ], "tests/*.py" = [
            "A002",
            "A003",
            "ANN001",
            "ANN003",
            "ANN201",
            "ANN202",
            "ANN205",
            "ARG001",
            "ARG002",
            "ARG005",
            "D102",
            "D417",
            "E712",
            "ERA001",
            "F403",
            "PGH003",
            "PLR0913",
            "PLR0917",
            "PLR2004",
            "PLR6301",
            "S101",
            "SLF001",
        ], "duties.py" = [
            "ANN001",
        ] }
        select = ["ALL"]
        unfixable = ["E712", "ERA001", "F401", "F841", "UP007"]
        [tool.ruff.lint.mccabe]
            # Unlike Flake8, default to a complexity level of 10.
            max-complexity = 10

        [tool.ruff.lint.pydocstyle]
            convention = "google"

        [tool.ruff.lint.pylint]
            max-args = 6

    [tool.ruff.format]
        indent-style              = "space"
        line-ending               = "auto"
        quote-style               = "double"
        skip-magic-trailing-comma = false
